tests/error/erro08.lua
function foo(x) return 2+x end
x = 3
::loop::
foo(loop)
goto loop